# DEPRECATED_aia-binding

./: .gitignore  CMakeLists.txt  agl-identity-agent.service.in
agl-identity-service/: CMakeLists.txt
agl-identity-service/conf.d/cmake/: config.cmake
agl-identity-service/conf.d/wgt/: config.xml.in
agl-identity-service/etc/: config.json
agl-identity-service/src/: CMakeLists.txt  agl-forgerock.c  agl-identity-binding.c  config.json  curl-wrap.c
binding/: CMakeLists.txt  agl-identity-binding.c  aia-uds-bluez.h
uds-ble-id-init-service/: CMakeLists.txt  btle-advise.service  btle-advise.timer
uds-ble-id-init-service/conf.d/cmake/: config.cmake
uds-ble-id-init-service/conf.d/wgt/: config.xml.in
uds-ble-id-init-service/src/: CMakeLists.txt  aia-uds-bluez.c  uds-ble-id-init-service.c
